# AshStocks

./: .env.example  .gitignore  ASHSTOCKS_EXECUTION_GUARD.md  README.md  am07-dashboard.css  app-am07-dashboard.js  app-ashstocks-broker-terminal.js  app-ashstocks-parameter-market-filter.js  app-ashstocks-terminal-depth-risk.js  app-ashstocks-terminal-filter-bridge.js  app-ashstocks-terminal-inspector.js  app-ashstocks-terminal-reasoning.js  app-ashstocks-trading-terminal.js  app-autoscan.js  app-broker-equivalence-audit.js  app-broker-ledger-bridge.js  app-broker-nav-guard.js  app-broker-scanner-hub.js  app-broker-shell.js  app-candle-engine-bridge.js  app-candle-trigger-tape.js  app-competitive-framework.js  app-data-intelligence.js  app-market-context.js  app-paper-order-lifecycle.js  app-paper-risk-console.js  app-paper-trader.js  app-parameter-piano-candle-bridge.js  app-parameter-piano.js  app-upstox-autostart.js  app-upstox-candle-hit-flow.js  app-upstox-market-watch-pulse.js  app-upstox-parameter-exact-sync.js  app-upstox-parameter-filter.js  app-upstox-parameter-keys.js  app-upstox-parameter-reasoning-bridge.js  app-upstox-parameter-trade-bridge.js  app-upstox-realtime-monitor.js  app-upstox-reasoning-dock.js  app-upstox-stream-client.js  (+55 more)
ash08/: ASH08_Desk_Dashboard.html  ASH08_Desk_Vision.html  ASH08_PAPER_v1.md  ASH08_SCANNER_v1.md  ASH08_UNIVERSE_v1.md  __init__.py  paper_engine.py  scanner.py  universe.py
ashstocks/: __init__.py  api.py
data/: ashstocks-framework-v1.json
data_bank/: DUPLICATE_CANDIDATES_v0_1.csv  GAP_TABLE.csv  INGESTION_LEDGER.csv  (+5 more)
(+37 files in other folders)
