[project]
name = "ashstocks"
version = "0.1.0"
description = "AshStocks private AI stock brain: data ingestion, parameter engine, auto paper trading, proof ledger."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.0",
  "pymongo[srv]>=4.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
